Added partial implementation of online impl of Game

--- a/Backend/web/WEB-INF/web.xml
+++ b/Backend/web/WEB-INF/web.xml
@@ -10,6 +10,6 @@
     
     <servlet-mapping>
         <servlet-name>Lobby</servlet-name>
-        <url-pattern>*.html</url-pattern>
+        <url-pattern>/create</url-pattern>
     </servlet-mapping>
 </web-app>
