--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -93,3 +93,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Includ the libraries
+!lib/*.jar
