Changed backend url, standardized reqs and resps to json

--- a/backend/web/WEB-INF/web.xml
+++ b/backend/web/WEB-INF/web.xml
@@ -10,6 +10,6 @@
     
     <servlet-mapping>
         <servlet-name>Lobby</servlet-name>
-        <url-pattern>/create</url-pattern>
+        <url-pattern>/lobby</url-pattern>
     </servlet-mapping>
 </web-app>
