Updated gitignore for vscode, minor reformatting

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -170,3 +170,13 @@ $RECYCLE.BIN/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
