--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "query-string": "^6.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
