--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "query-string": "^6.13.1"
+    "query-string": "^6.13.1",
+    "react-copy-to-clipboard": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
