--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,13 +7,17 @@
     <groupId>com.coolioasjulio.influence</groupId>
     <artifactId>Influence</artifactId>
     <version>0.4.0</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <build>
+        <finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
