Hack to fix the url mapping bug

--- a/backend/web/WEB-INF/web.xml
+++ b/backend/web/WEB-INF/web.xml
@@ -12,4 +12,9 @@
         <servlet-name>Lobby</servlet-name>
         <url-pattern>/lobby</url-pattern>
     </servlet-mapping>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/index.html</location>
+    </error-page>
 </web-app>
