--- a/backend/web/WEB-INF/web.xml
+++ b/backend/web/WEB-INF/web.xml
@@ -17,4 +17,13 @@
         <error-code>404</error-code>
         <location>/index.html</location>
     </error-page>
+
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
